--- a/samples/ChartJs.Blazor.Sample/Pages/MixedChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/MixedChart.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/MixedChart"
 @using ChartJs.Blazor.ChartJS
 @using ChartJs.Blazor.ChartJS.BarChart
+@using ChartJs.Blazor.ChartJS.BarChart.Dataset
 @using ChartJs.Blazor.ChartJS.LineChart
 @using ChartJs.Blazor.ChartJS.MixedChart
 @using ChartJs.Blazor.Components
