--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <span class="oi oi-bar-chart" aria-hidden="false"></span> Bar Charts
+            <div class="px-4" style="color: azure; margin-top: 20px">Bar Charts</div>
             <ul class="nav flex-column">
 
                 <li class="nav-item px-3">
