Improved Line Chart

--- a/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
@@ -25,7 +25,7 @@
                 Display = true,
                 Responsive = true,
                 Title = new OptionsTitle() {Display = "IUG", Text = "I R TITLE"},
-                Tooltips = new Tooltips() {Mode = TooltipMode.point}
+                Tooltips = new Tooltips() {Mode = Mode.point}
             },
             Data = new BubbleChartData
             {
