--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart.cshtml
@@ -3,6 +3,7 @@
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.LineChart
 @using ChartJs.Blazor.Components
+@using ChartJs.Blazor.Util.Color
 
 
 <h2>Chart JS charts using Blazor</h2>
@@ -29,7 +30,7 @@
                 Title = new OptionsTitle {Display = "title?", Text = "Text?"},
                 Tooltips = new Tooltips
                 {
-                    Mode = TooltipMode.nearest,
+                    Mode = Mode.nearest,
                     Intersect = false
                 },
                 Scales = new Scales
@@ -62,7 +63,7 @@
                 Hover = new LineChartOptionsHover
                 {
                     Intersect = true,
-                    Mode = TooltipMode.nearest
+                    Mode = Mode.nearest
                 }
             },
             Data = new LineChartData
@@ -75,8 +76,19 @@
                         BackgroundColor = "#ff6384",
                         BorderColor = "#ff6384",
                         Label = "# of Votes from blazor",
-                        Data = new List<dynamic> {19, 12, 5, 3, 3, 2},
-                        Fill = false,
+                        Data = new List<dynamic> {4, 6, 2, 7, 9, 1},
+                        Fill = true,
+                        BorderWidth = 2,
+                        PointRadius = 3,
+                        PointBorderWidth = 1
+                    },
+                    new LineChartDataset
+                    {
+                        BackgroundColor = ColorUtil.ColorString(34, 78, 234, 0.56),
+                        BorderColor = ColorUtil.ColorString(34, 78, 234, 0.56),
+                        Label = "# of Votes from blazor",
+                        Data = new List<dynamic> {14, 16, 12, 17, 19, 11},
+                        Fill = true,
                         BorderWidth = 2,
                         PointRadius = 3,
                         PointBorderWidth = 1
@@ -95,23 +107,15 @@
     public void UpdateChart()
     {
     //Update existing dataset
+        var rand = new Random();
         lineChartConfig.Data.Labels.Add($"New{DateTime.Now.Second}");
-        var firstDataSet = lineChartConfig.Data.Datasets[0];
-
-        firstDataSet.Data.Add(DateTime.Now.Second);
-
-    //Add new dataset
-    //blazorLineChartJS.Data.Datasets.Add(new ChartJsLineDataset()
-    //{
-    //    BackgroundColor = "#cc65fe",
-    //    BorderColor = "#cc65fe",
-    //    Label = "# of Votes from blazor 1",
-    //    Data = new List<int> {20,21,12,3,4,4},
-    //    Fill = true,
-    //    BorderWidth = 2,
-    //    PointRadius = 3,
-    //    PointBorderWidth = 1
-    //});
+        var newVal = rand.Next(lineChartConfig.Data.Datasets.SelectMany(dataset => dataset.Data).Cast<int>().Max());
+        newVal -= 4;
+        lineChartConfig.Data.Datasets.ForEach(dataset =>
+        {
+            dataset.Data.Add(newVal);
+            newVal += rand.Next(4);
+        });
 
         lineChartJs.UpdateChart(lineChartConfig);
     }
