Improved Pie Chart

--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
@@ -1,8 +1,6 @@
-﻿@page "/LineChart"
-@using ChartJs.Blazor.ChartJS
+﻿@page "/FillLineChart"
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.LineChart
-@using ChartJs.Blazor.Components
 @using ChartJs.Blazor.Util.Color
 
 
