--- a/samples/ChartJs.Blazor.Sample/Pages/DoughnutChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/DoughnutChart.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "/DoughnutChart"
+@using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.DoughnutChart
 @using ChartJs.Blazor.Util.Color
 
