--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -12,11 +12,24 @@
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Radar Chart
             </NavLink>
         </li>
+
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/linechart">
-                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Chart
-            </NavLink>
+            <div class="px-4" style="color: azure; margin-top: 20px">Line Charts</div>
+            <ul class="nav flex-column">
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/linechart">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Chart
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/filllinechart">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Fill Line Chart
+                    </NavLink>
+                </li>
+            </ul>
         </li>
+
         <li class="nav-item px-3">
             <div class="px-4" style="color: azure; margin-top: 20px">Bar Charts</div>
             <ul class="nav flex-column">
