--- a/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
@@ -3,7 +3,7 @@
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.Util.Color
 
-<h2>Chart JS charts using Blazor</h2>
+<h2>Bubble Chart</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
