--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
@@ -4,7 +4,7 @@
 @using ChartJs.Blazor.Util.Color
 
 
-<h2>Chart JS charts using Blazor</h2>
+<h2>Filled Line Chart</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
