--- a/samples/ChartJs.Blazor.Sample/Pages/MixedChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/MixedChart.cshtml
@@ -1,12 +1,9 @@
 ﻿@page "/MixedChart"
-@using ChartJs.Blazor.ChartJS
-@using ChartJs.Blazor.ChartJS.BarChart
 @using ChartJs.Blazor.ChartJS.BarChart.Dataset
 @using ChartJs.Blazor.ChartJS.LineChart
 @using ChartJs.Blazor.ChartJS.MixedChart
-@using ChartJs.Blazor.Components
 
-<h2>Chart JS charts using Blazor</h2>
+<h2>Mixed Charts</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
