--- a/samples/ChartJs.Blazor.Sample/Pages/PieChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/PieChart.cshtml
@@ -1,10 +1,8 @@
 ﻿@page "/PieChart"
-@using ChartJs.Blazor.ChartJS
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.PieChart
-@using ChartJs.Blazor.Components
 
-<h2>Chart JS charts using Blazor</h2>
+<h2>Pie Chart</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
