--- a/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
+++ b/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Blazor.Layouts
 @using Microsoft.AspNetCore.Blazor.Routing
 @using ChartJs.Blazor
-@using ChartJs.Blazor.Components
+@using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS
 @using ChartJs.Blazor.ChartJS.BarChart
 @using ChartJs.Blazor.Sample
