--- a/samples/ChartJs.Blazor.Sample/Pages/BarCharts/HorizontalBarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/BarCharts/HorizontalBarChart.cshtml
@@ -1,9 +1,9 @@
 ﻿@page "/HorizontalBarChart"
 @using ChartJs.Blazor.ChartJS.BarChart.Dataset
+@using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.Util.Color
 
-<div class="container">
-    <h2>Bar Chart</h2>
+    <h2>Stacked Bar Chart</h2>
     <div class="row">
         <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
     </div>
@@ -11,7 +11,6 @@
                      Config="@barChartConfig"
                      Width="600"
                      Height="300"/>
-</div>
 
 @functions {
 
