--- a/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
@@ -2,16 +2,15 @@
 @using ChartJs.Blazor.ChartJS.BarChart.Dataset
 @using ChartJs.Blazor.Util.Color
 
-<div class="container">
-    <h2>Bar Chart</h2>
-    <div class="row">
-        <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
-    </div>
-    <ChartJsBarChart ref="barChart"
-                     Config="@barChartConfig"
-                     Width="600"
-                     Height="300"/>
+
+<h2>Simple Bar Chart</h2>
+<div class="row">
+    <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
+<ChartJsBarChart ref="barChart"
+                 Config="@barChartConfig"
+                 Width="600"
+                 Height="300"/>
 
 @functions {
 
