Added Polar Area Chart support

--- a/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
@@ -25,7 +25,7 @@
                 Responsive = true,
                 Display = true,
                 Title = new OptionsTitle {Display = "radar chart title display", Text = "some text"},
-                Legend = new RadarChartLegend {Position = Position.top},
+                Legend = new RadarChartLegend {Position = Position.TOP},
                 Scale = new Scale {Ticks = new Ticks {BeginAtZero = true}}
             },
             Data = new RadarChartData()
