--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -59,6 +59,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/PolarAreaChart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Polar Area Chart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/mixedchart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Mixed Chart
             </NavLink>
